# GIS_software

./: .gitignore  CMakeLists.txt  Dev_manual.md  README.md  rules.txt  sructure.txt  structure.txt
resources/: mainwindow.ui
sample_data/: README.txt  create_sample_spatialite.sql  sample_line.geojson  sample_raster.asc  sample_table.csv
scripts/: package_windows.ps1
src/: main.cpp
src/core/: aimanager.cpp  aimanager.h  conversationcontext.cpp  conversationcontext.h  ollamaclient.cpp  ollamaclient.h  qgsappinitializer.h  toolcalldispatcher.cpp  toolcalldispatcher.h
src/core/ai/: aimanager.cpp  aimanager.h  conversationcontext.h  ollamaclient.cpp  ollamaclient.h  toolcalldispatcher.cpp  toolcalldispatcher.h
src/core/ai/memory/: memoryfilemanager.cpp  memoryfilemanager.h  systemcontextbuilder.cpp  systemcontextbuilder.h
src/core/integration/: qgsappinitializer.cpp  qgsappinitializer.h
src/core/interfaces/: iaitoolhost.h
src/core/memory/: memoryfilemanager.cpp  memoryfilemanager.h  systemcontextbuilder.cpp  systemcontextbuilder.h
src/core/workflow/: analysisworkflowcoordinator.cpp  analysisworkflowcoordinator.h
src/model/: aimodule.h  analysismodule.h  analysisresult.h  chatmessage.h  datamodule.h  layerinfo.h  numericdataset.h
src/model/dto/: analysisdataasset.h  analysisinputdescriptor.h  analysisresult.h  chatmessage.h  layerinfo.h  metadatadocument.h  numericdataset.h  spatialrasterdata.h  spatialvectordata.h  tabulardata.h  visualizationdata.h  visualizationpoint.h  visualizationseries.h
src/model/enums/: analysiscapability.h  dataassettype.h  maptooltype.h  overlayoperationtype.h  visualizationcharttype.h
src/model/legacy/: aimodule.cpp  aimodule.h  analysismodule.cpp  analysismodule.h  datamodule.cpp  datamodule.h
src/service/: analysisservice.cpp  analysisservice.h  dataservice.h  numericdatareader.cpp  numericdatareader.h
src/service/analysis/: analysisservice.cpp  analysisservice.h  attributequeryservice.cpp  attributequeryservice.h  spatialanalysisservice.cpp  spatialanalysisservice.h  statisticalanalysisservice.cpp  statisticalanalysisservice.h
src/service/data/: csvinspector.cpp  csvinspector.h  dataformatrouter.cpp  dataformatrouter.h  datarepository.cpp  datarepository.h  dataservice.cpp  dataservice.h  numericdatareader.cpp  numericdatareader.h  spatialdatabaseconnection.cpp  spatialdatabaseconnection.h  spatialdatabasequery.h  spatialdatabaseservice.cpp  spatialdatabaseservice.h  xmlinspector.cpp  xmlinspector.h
src/ui/: mainwindow.cpp  mainwindow.h
src/ui/components/: antbutton.cpp  antbutton.h  imagebutton.cpp  imagebutton.h
src/ui/docks/: aidockwidget.cpp  aidockwidget.h  analysisworkspacedockwidget.cpp  analysisworkspacedockwidget.h
src/ui/map/: map3dviewwidget.cpp  map3dviewwidget.h  mapcanvasmanager.cpp  mapcanvasmanager.h  mapcanvaswidget.cpp  mapcanvaswidget.h
src/ui/style/: imagebutton.cpp  imagebutton.h
src/ui/theme/: antdesigntheme.cpp  antdesigntheme.h
src/ui/visualization/: visualizationdockwidget.cpp  visualizationdockwidget.h  visualizationmanager.cpp  visualizationmanager.h
src/ui/visualization/charts/: barchartwidget.cpp  barchartwidget.h  chartwidget.cpp  chartwidget.h  linechartwidget.cpp  linechartwidget.h
src/ui/widgets/: mapcanvasmanager.h  mapcanvaswidget.cpp  mapcanvaswidget.h
